# borf

./: README.md  requirements.txt  setup.cfg
borf/: __init__.py
borf/algorithms/: borf_alignment.py  borf_heuristic.py  borf_transform.py  least_squares_nan.py  oned_nan_symbolic_aggregate_approximation.py  piecewise_aggregate_approximation.py  symbolic_aggregate_approximation.py
borf/classes/: borf_auto.py  borf_multi.py  borf_single.py  receptive_field.py
borf/utils/: condition_utils.py  io_utils.py  transform_utils.py
borf/xai/: borf_explanation.py  borf_shap_explainer.py
ebop/: __init__.py
ebop/algorithms/: ebop_alignment.py  ebop_heuristic.py  ebop_transform.py  oned_nan_symbolic_aggregate_approximation.py  piecewise_aggregate_approximation.py  symbolic_aggregate_approximation.py
ebop/classes/: ebop_auto.py  ebop_multi.py  ebop_single.py  receptive_field.py
ebop/utils/: transform_utils.py
ebop/xai/: ebop_explanation.py  ebop_shap_explainer.py
env/: environment.yml
fast_borf/: __init__.py  align.py  constants.py  dilation_mapping.py  hash_unique.py  heuristic.py  moving.py  utils.py  zscore.py
fast_borf/bag_of_patterns/: borf_new_new_sax.py  borf_new_sax.py  borf_sax.py  utils.py
fast_borf/classes/: utils.py
fast_borf/piecewise_aggregate_approximation/: piecewise_aggregate_approximation.py  piecewise_aggregate_approximation_classic.py  piecewise_aggregate_approximation_classic_jitted.py  (+2 more)
mathematica/: loglinear.nb
notebooks/: explanation_example.ipynb  explanation_example_2.ipynb  prediction_example.ipynb  xai_example.ipynb
(+19 files in other folders)
