[metadata]
name = borf

[options]
packages = fast_borf, fast_borf.classes

install_requires =
    awkward
    numpy
    scikit-learn
    numba
    scipy
    sparse
python_requires = >= 3.9

[options.extras_require]
test =
    pytest
    pytest-cov
notebooks =
    notebook
    downtime
    plottime
xai =
    shap
